# caliptra-dpe

./: Cargo.toml  flake.nix
dpe/src/: context.rs  dpe_instance.rs  error.rs  lib.rs  response.rs  state.rs  validation.rs  x509.rs
dpe/src/commands/: certify_key.rs  derive_context.rs  destroy_context.rs  get_certificate_chain.rs  get_profile.rs  initialize_context.rs  mod.rs  rotate_context.rs  sign.rs  update_context_measurement.rs
verification/: Cargo.toml
xtask/src/: main.rs
